<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="410dp"
            android:layout_height="525dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="15dp">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="53dp">
            <EditText
                    android:layout_width="183dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtRuc" android:hint="@string/labelRUC" android:minHeight="48dp"
                    android:layout_marginStart="20dp"/>
            <View
                    android:id="@+id/divider"
                    android:layout_width="2dp"
                    android:layout_height="41dp"
                    android:background="?android:attr/listDivider"
            />
            <EditText
                    android:layout_width="183dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtRepresentanteLegal" android:hint="@string/representanteLegal"
                    android:minHeight="48dp"/>
        </LinearLayout>
        <EditText
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtNombreComercial"
                android:hint="@string/nombreComercial"
                android:minHeight="48dp"
                android:layout_marginTop="5dp" android:layout_marginStart="20dp"/>
        <EditText
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtDireccion" android:hint="@string/direccion" android:minHeight="48dp"
                android:layout_marginTop="5dp" android:layout_marginStart="20dp"/>
        <EditText
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/txtTelefono" android:hint="@string/telefono" android:minHeight="48dp"
                android:layout_marginTop="5dp" android:layout_marginStart="20dp"/>
        <EditText
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtProductos" android:hint="@string/productos" android:minHeight="48dp"
                android:layout_marginTop="5dp" android:layout_marginStart="20dp"/>
        <EditText
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtCredito" android:hint="@string/credito" android:minHeight="48dp"
                android:layout_marginTop="5dp" android:layout_marginStart="20dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="205dp">
            <ImageView
                    android:layout_width="215dp"
                    android:layout_height="173dp" app:srcCompat="@drawable/ic_launcher_foreground"
                    android:id="@+id/imageView" android:layout_marginStart="10dp" android:layout_marginTop="10dp"/>
            <Button
                    android:text="camara"
                    android:layout_width="124dp"
                    android:layout_height="wrap_content" android:id="@+id/button"
                    android:layout_marginTop="80dp" android:layout_marginStart="20dp"/>
        </LinearLayout>
    </LinearLayout>
    <androidx.cardview.widget.CardView
            android:layout_width="410dp"
            android:layout_height="55dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/cardView">
        <Button
                android:text="Lista"
                android:layout_width="77dp"
                android:layout_height="50dp" android:id="@+id/btnListarProveedores" android:layout_marginStart="10dp"
                android:layout_marginTop="2dp" android:textAllCaps="false"/>
        <Button
                android:text="Guardar"
                android:layout_width="wrap_content"
                android:layout_height="50dp" android:id="@+id/btnGuardarProveedor" android:layout_marginStart="100dp"
                android:layout_marginTop="2dp" android:textSize="14sp" android:textAllCaps="false"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnEditar" android:layout_marginStart="210dp"
                android:layout_marginTop="2dp" android:textAllCaps="false" android:text="Editar"/>
        <Button
                android:text="Borrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnBorrar" android:layout_marginStart="310dp"
                android:layout_marginTop="2dp" android:textAllCaps="false"/>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>